# Portfolio

./: .gitignore  Cargo.toml  README.md  generate_works.ps1  package-lock.json  package.json
src/: app.rs  lib.rs
src/components/: footer.rs  mod.rs  nav.rs
src/routes/: home.rs  license.rs  links.rs  mod.rs  profile.rs  qualifications.rs  works.rs
static/: .gitignore  index.html  index.ts  link.data.json  profile.data.json  qualification.data.json  styles.scss
tools/encrypter/: .gitignore  Cargo.toml
tools/encrypter/src/: main.rs
tools/works_generator/: Cargo.toml  additional_information.json
tools/works_generator/src/: main.rs  repository_list.rs
