[package]
name = "works_generator"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = "1.0.124"
serde_json = "1.0.64"
once_cell = "1.7.2"
